# pyxll-openbb

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  pyproject.toml
pyxll_openbb/: commands.py  generate_wrappers.py  obbject.py  pyxll.py  pyxll_entrypoints.py  ribbon.py
pyxll_openbb/resources/: ribbon.xml
